<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PushSettingActivity">

    <LinearLayout
        android:id="@+id/ll_pushsetting_notice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_notice"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_notice" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pushsetting_noticecoupon"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_noticecoupon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_noticecoupon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pushsetting_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_update"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_update" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pushsetting_event"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_event"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_event" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pushsetting_endevent"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_endevent"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_endevent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pushsetting_eventwinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_eventwinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_eventwinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pushsetting_youtube"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_pushsetting_youtube"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/switch_pushsetting_youtube" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>